force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__AggregationScope__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__AggregationScope__c</fullName>
        <description>Indicates whether quote lines referencing this schedule should be aggregated within quote, group or not at all for the purposes of volume discount calculation.</description>
        <inlineHelpText>Specify how to aggregate quantities of quote lines for products using this schedule. By default quantity of each line (even for the same product) is considered independently.</inlineHelpText>
        <label>Aggregation Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>