force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__CrossOrders__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__CrossOrders__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether volume discount should be applied on combined quantities across prior orders.</description>
        <inlineHelpText>Select the checkbox if you want to extend volume discounts on total volume owned by customer (i.e. quantity quoted plus prior purchases).</inlineHelpText>
        <label>Cross Orders</label>
        <type>Checkbox</type>
    </CustomField>