force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this Price Schedule.</description>
        <inlineHelpText>Description for this Price Schedule.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </CustomField>