force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__DiscountUnit__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountUnit__c</fullName>
        <description>This is the Discount Unit for the Price Schedule.</description>
        <inlineHelpText>Specify the Discount Unit: Amount or Percent.</inlineHelpText>
        <label>Discount Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                    <default>true</default>
                    <label>Percent</label>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>