force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__Order__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order that this Price Schedule applies to.</description>
        <inlineHelpText>Order that this Price Schedule applies to.</inlineHelpText>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </CustomField>