force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__OrderProduct__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OrderProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order product that this Price Schedule applies to.</description>
        <inlineHelpText>Order product that this Price Schedule applies to.</inlineHelpText>
        <label>Order Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select Order Products of the associated order.</errorMessage>
            <filterItems>
                <field>OrderItem.OrderId</field>
                <operation>equals</operation>
                <valueField>$Source.SBQQ__Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </CustomField>