force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__PriceScale__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceScale__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Decimal places for prices produced by this Price Schedule.</description>
        <inlineHelpText>Decimal places for prices produced by this Price Schedule.</inlineHelpText>
        <label>Price Scale</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>