force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__PriceType__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PriceType__c</fullName>
        <description>The price type that determines how the prices or discounts are calculated.</description>
        <inlineHelpText>The price type that determines how the prices or discounts are calculated.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PriceType</valueSetName>
        </valueSet>
    </CustomField>