force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__Quote__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Quote that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</description>
        <inlineHelpText>Quote that this Price Schedule applies to. Only used in combination with Price Schedule Override on Quote Line Editor UI.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Price Schedules</relationshipLabel>
        <relationshipName>PriceSchedules</relationshipName>
        <type>Lookup</type>
    </CustomField>