force-app/main/default/objects/SBQQ__PriceSchedule__c/fields/SBQQ__QuoteLineQuantityField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteLineQuantityField__c</fullName>
        <description>Field used to calculate Price Schedule pricing.</description>
        <inlineHelpText>Field used to calculate Price Schedule pricing.</inlineHelpText>
        <label>Quote Line Quantity Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity</fullName>
                    <default>true</default>
                    <label>Quantity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>