force-app/main/default/objects/SBQQ__PriceSchedule__c/listViews/SBQQ__All1.listView-meta.xml
<ListView>
        <fullName>SBQQ__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>